fix overlapping elements in stencil-big

--- a/www/sass/stencil/_big.scss
+++ b/www/sass/stencil/_big.scss
@@ -7,7 +7,7 @@
         margin-top: 10px;
     }
     .object-bottom-line {
-        margin-top: 20px;
+        margin-top: 36px;
     }
     position: relative;
 }
